--- a/Inheritance and OOP/index.html
+++ b/Inheritance and OOP/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <canvas id="canvas"></canvas>
 </body>
 <script src="1Shapes.js"></script>
 </html>
