Added hide and show form properties upon change of figyre

--- a/Inheritance and OOP/index.html
+++ b/Inheritance and OOP/index.html
@@ -34,6 +34,9 @@
                 <input type="color" id="color">
                 <input type="button" value ="Add" id="add">
                 <input type="button" value ="Remove" id="remove">
+                <input type="button" value ="Up" id="up">
+                <input type="button" value ="Down" id="down">
+
             </form>
             <div id="information">Figures drawn</div>
         </div>
